compiler/acton/test/syntaxerrors/err29.act
# Invalid slice syntax
def bad_slice():
    arr = [1, 2, 3, 4, 5]
    return arr[1:::]